emotion 세팅 및 다목적 버튼 컴포넌트 개발중

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "depoly": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m \"Deploy Next.js to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
