--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@react-three/fiber": "^8.3.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "three": "^0.143.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
