--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/three": "^0.143.0",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "eslint": "8.20.0",
