--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@react-three/cannon": "^6.4.0",
     "@react-three/drei": "^9.22.7",
     "@react-three/fiber": "^8.3.1",
     "next": "12.2.3",
